feat: transaction frontend, pagination, cors, wip crud persons and accounts, ui components